# Sample-SFML-Project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  release.sh  reset_save_files.sh  run.sh
include/: Settings.hpp  UI.hpp
src/: Settings.cpp  UI.cpp  main.cpp
src/include/: Settings.hpp  UI.hpp
